# Practical-work_TypingTrainer.

./: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
lessons/: Common words.txt  Lorem Ipsum.txt  Numbers and symbols.txt  Python code.txt
